Opened 11 years ago

Closed 11 years ago

#10100 closed bug (fixed)

HaikuDepot: "uninstall" button doesn't work at all.

Reported by: Giova84 Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/HaikuDepot Version: R1/Development
Keywords: haikudepot uninstall system packages Cc:
Blocked By: Blocking:
Platform: x86

Description

hrev46198

As the subject says, in HaikuDepot the "uninstall" button doesn't work at all (tried with many packages) so currently, to uninstall packages, we have to go in the "packages" folder and manually delete unwanted packages.

Change History (5)

comment:1 by anevilyak, 11 years ago

Owner: changed from stippi to anevilyak
Status: newassigned

Odd, it worked for me when I implemented it. Will see if something broke.

comment:2 by anevilyak, 11 years ago

Out of curiosity, are you basing this only on the presence/absence of the package file, or on whether or not the package contents are actually visible? From a quick look, the package kit appears to simply deactivate the package rather than removing it entirely.

comment:3 by Giova84, 11 years ago

A practical example:

I'm attempting to uninstall Vision. Inside HaikuDepot i select Vision and then i click "Uninstall". If i launch a query for Vision i can see that instead, Vision is still active on my system. The expected behaviour clicking on "Uninstall" SHOULD be to remove the package file from "packages" folder (vision is located under "/system/packages") and inside HaikuDepot, change the status of Vision from "active" to "available" (and the uninstall button should become "Install"). But currently, at least on hrev46198, doesn't happen nothing of which i described. Clicking on uninstall doesn't do anything: Vision is still active and the status remain unchanged inside HaikuDepot.

comment:4 by anevilyak, 11 years ago

Keywords: haikudepot system packages added; HaikuDepot button doesn't work at all removed
Status: assignedin-progress

The problem is that HaikuDepot currently always sets the installation location to ~/config. Since the Vision package isn't located there in a default Haiku install, attempting to find it for removal fails. Need to take that into account. Uninstall does work correctly for packages you've added yourself via Depot since those then wind up in the location it's looking in.

comment:5 by anevilyak, 11 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev46232.

Note: See TracTickets for help on using tickets.